Fix z-index navbar vs buttons

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ main img.alignleft {
 }
 
 .navbar-fixed {
-    z-index: 1;
+    z-index: 2;
 }
 
 .navbar-fixed nav, .sidenav li:first-child {
